--- a/style.css
+++ b/style.css
@@ -576,3 +576,10 @@ section {
   transform-origin: 50% 50%;
 }
 
+.skill-title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 15px;
+}
