--- a/style.css
+++ b/style.css
@@ -583,3 +583,13 @@ section {
   text-align: center;
   margin-bottom: 15px;
 }
+
+.tag {
+  background-color: #1e1e1e;
+  border: 1px solid #90caf9;
+  color: #90caf9;
+  padding: 4px 10px;
+  font-size: 0.75rem;
+  border-radius: 12px;
+  font-weight: 500;
+}
