--- a/style.css
+++ b/style.css
@@ -611,6 +611,7 @@ section {
   flex-direction: column;
   align-items: center;
   text-align: center;
+  margin-bottom: 20px;
 }
 
 /* Match skill icon size for project image */
